# PMFTV

./: .coverage  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  REQUIREMENTS.txt  chambolle_pock.py  direct_1d_tv.py  doc_requirements.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  deploy-docs.yaml  python-app.yaml  run_tests.yml
.hypothesis/examples/0ad918d3d8abb23d/: 210aae9c800efd3c
.hypothesis/examples/1db52b2465ce6361/: a4a7807572875968  aba26d2821fce28f
.hypothesis/examples/24c895f041b72e77/: 109c777929cde21d
.hypothesis/examples/558b9918a44f7979/: 1d81397e3cfeb667
.hypothesis/examples/622fcfbac151dfa8/: 2de007fef51f394b  431e349bbb154688  7eba3062e17525d6  ac6e13262bec7d2f  e9a5afe58b8b33bb
.hypothesis/examples/645189911f7497d9/: 5b58be75914d1a00
.hypothesis/examples/78f004e9e9a95506/: c8298ed115a7e74f
.hypothesis/examples/955fd66ad88e0896/: 37b6d181c90b652d  7e573921d1de4cb7  c23e2a850824eea8  d4e6c72edfa5637f  e7ab00e59bb08ab0
.hypothesis/examples/a344cd30f8ccdf9d/: 23f566c13506837a
.hypothesis/examples/b930c7650fa8460f/: 025507685bc5a231
.hypothesis/examples/d392e33c55799252/: 9c8688e5c5d6c992
camilla/code/: main.py
camilla/code/src/: data.py  model.py
docs/: Makefile  README_clmc.md  README_lars.md  README_lmc.md  README_slmc.md  README_tvlmc.md  index.rst  make.bat
docs-original/: conf.py  example.ipynb
examples/: basic_example.py  effect_of_convolution.py  gridsearch.py  gridsearch_example.py  inductive_mc.py  latent_variable.py  mlflow_example.py  mse_convolution.py  phase_shifted.py  plotting.py  rank_selection.py  synth_control.py  synthetic_data.py  utils.py
lmc/: __init__.py  convergence.py
lmc/factor_model/: __init__.py  _base.py  cmc.py  lmc.py  scmc.py  wcmc.py
projects/: README.rtf
projects/template/: baseline.py  distance_matrix.py  gdl_kfold_run.py  gdl_run.py  mf_conv_kfold_grid_search.py  mf_conv_kfold_run.py  mf_conv_run.py  mf_grid_search.py  mf_lars_kfold_run.py  mf_run.py  prediction.py
projects/template/plotting/: mf_lars_rank_estimate.py
projects/template/simulation/: gdl_experiments.py  gdl_training.py  (+2 more)
src/lmc/: __init__.py  cmc.py  larsmc.py  lmc.py  wcmc.py
src/longimc/: __init__.py  logging.py  util.py
src/longimc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
template/: README.md  main.py
tests/: _test_experiment.py  test_cmc.py  test_experiment.py  test_scmc.py
tests/test_factor_models/: test_base.py  test_cmf.py  test_scmf.py  test_shifts.py  test_utils.py
(+57 files in other folders)
